# Inverted-pendulum-controller

./: .gitignore  README.md  __init__.py  experiment_output.txt  fuzzy.py  ki_results_pd_lqr_nowind.csv  ki_results_pd_lqr_wind.csv  ki_results_pd_pd_nowind.csv  ki_results_pd_pd_wind.csv  main.py  mpc.py  mpc_J1.py  mpc_J2.py  mpc_working.py  pyproject.toml  setup.cfg
config/: env.yaml
controllers/: __init__.py  base.py  fuzzy.py  fuzzy_lqr.py  lmpc.py  lqr.py  mpc.py  mpc_J1.py  mpc_J2.py  mpc_LQR.py  mpc_altcost.py  mpc_no.py  mpc_utils.py  pd_lqr.py  pd_pd.py  pid_lqr.py  ts_fuzzy.py
env/: animation.py  archives.py  disturbance.py  metrics.py  model.py  sim.py
latex/: bibliografia.bib  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.synctex(busy)  main.tex  main.toc
prezentacja/: prezentacja_obrona.aux  prezentacja_obrona.fdb_latexmk  prezentacja_obrona.fls  prezentacja_obrona.nav  prezentacja_obrona.out  prezentacja_obrona.tex  prezentacja_obrona.toc
tests/: conftest.py  test_dynamics.py  test_metrics.py
tools/: experiments_results.json  generate_combined_tuning_plots.py  generate_fuzzy_membership_plot.py  generate_open_loop.py  generate_tuning_plots.py  generate_wind_plot.py  ki_test.py  robustness_results.json  robustness_sensitivity.json  run_experiments.py  run_robustness_experiment.py  test_mpc_lqr_params.py  tune_lmpc.py  tune_mpc_no.py  tune_pd_pd.py  tune_pid_lqr.py
tuning/: objectives.py  optimizer.py  tune_fuzzy_lqr.py  tune_fuzzy_wind.py  (+5 more)
(+29 files in other folders)
